feat: add admin payment operations console